make career.html

--- a/index.html
+++ b/index.html
@@ -3,9 +3,61 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>resume_sasaki-daisuke</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
 </head>
 <body>
-    
+
+
+<header>
+    <!--タイトルメニューバー-->
+<div class="header-title">佐々木大輔
+<div class="header-subtitle">Webエンジニア</div>
+</div>
+        <ul id="nav">
+          <li><a href="#">ホーム</a></li>
+          <li><a href="career.html">経歴</a></li>
+          <li><a href="#">実績</a></li>
+          <li><a href="#">お問い合わせ</a></li>
+        </ul>
+</header>
+<div class="section-introduction">
+
+<div class="my-picture">
+    <img src="./img/my-picture.jpg" alt="">
+</div>
+<div class="introduction-text">
+<h1>はじめまして！<br>
+    こちらのサイトでは私のこれまでの経歴を紹介しています。</h1>
+    <span class="circle">3</span>
+    <span class="circle" href="~">1</span>
+    <span class="circle" href="~">2</span>
+</div>
+<div class="introduction-text-comment">
+    はじめまして。Webエンジニアの佐々木大輔と申します。はじめまして。Webエンジニアの佐々木大輔と申します。
+</div>
+</div>
+<footer class="footer_section">
+    <div class="footer-part">
+            <div class="footer-menu">
+            <a href="" class="">電話</a><br>
+            <a href="" class="">TEL:08096386752</a>
+            </div>
+            <div class="footer-menu">
+                <a href="" class="">メール</a><br>
+                <a href="mailto:gerund25495641@gmail.com" class="">gerund25495641@gmail</a>
+            </div>
+            <div class="footer-menu">
+                <a href="" class="">SNS</a><br>
+                <a href="https://www.facebook.com/profile.php?id=100006468396288"><i class="fab fa-facebook-f"></i></a>
+                <a href="https://twitter.com/daisukesasaki56"><i class="fab fa-twitter"></i></a>
+            </div>
+            <div class="footer-menu">
+                <a href="" class="">このサイトは佐々木大輔<br>によって作成されました。</a>
+            </div>
+      </div>
+</footer>
+
 </body>
 </html>
