一通り実装完了

--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
 </head>
 <body>
 
-
+<div class="wrap-index">
 <header>
     <!--タイトルメニューバー-->
 <div class="header-title">佐々木大輔
 <div class="header-subtitle">Webエンジニア</div>
 </div>
         <ul id="nav">
-          <li><a href="#">ホーム</a></li>
+          <li><a href="index.html">ホーム</a></li>
           <li><a href="career.html">経歴</a></li>
-          <li><a href="#">実績</a></li>
-          <li><a href="#">お問い合わせ</a></li>
+          <li><a href="performance.html">実績</a></li>
+          <li><a href="contact.html">お問い合わせ</a></li>
         </ul>
 </header>
 <div class="section-introduction">
@@ -30,13 +30,12 @@
 <div class="introduction-text">
 <h1>はじめまして！<br>
     こちらのサイトでは私のこれまでの経歴を紹介しています。</h1>
-    <span class="circle">3</span>
-    <span class="circle" href="~">1</span>
-    <span class="circle" href="~">2</span>
+    <a href="career.html"><span class="circle">経歴</span></a>
+    <a href="performance.html"><span class="circle">実績</span></a>
+    <a href="contact.html"><span class="circle">お問い合わせ</span></a>
 </div>
 <div class="introduction-text-comment">
-    はじめまして。Webエンジニアの佐々木大輔と申します。はじめまして。Webエンジニアの佐々木大輔と申します。
-</div>
+はじめまして。Webエンジニアの佐々木大輔と申します。
 </div>
 <footer class="footer_section">
     <div class="footer-part">
@@ -58,6 +57,7 @@
             </div>
       </div>
 </footer>
-
+</div>
+</div>
 </body>
 </html>
